--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ venv/
 data/maptask/transcripts 
 data/maptask/parsed_transcripts 
 data/edacc/
+data/switchboard
 model/
 trained_models/
 bespoketart.egg-info/
