--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@ venv/
 **/.ipynb_checkpoints/
 data/maptask/transcripts 
 data/maptask/parsed_transcripts 
-data/edacc/
-data/switchboard
+data/edacc/data 
+data/switchboard/switchboard
 model/
 trained_models/
 trained_model/
