Use TurnGPT for preprocessing data, removing noisy tokens into a dictionary based format with word-level features

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ venv/
 data/maptask/transcripts 
 data/maptask/parsed_transcripts 
 data/edacc/data 
+data/switchboard/splits/data
 data/switchboard/switchboard
 model/
 trained_models/
