--- a/requirements.txt
+++ b/requirements.txt
@@ -1,74 +1,121 @@
+## The following requirements were added by pip freeze:
+absl-py==2.0.0
 aiohttp @ file:///croot/aiohttp_1694181079612/work
 aiosignal @ file:///tmp/build/80754af9/aiosignal_1637843061372/work
-async-timeout @ file:///work/ci_py311/async-timeout_1676826962453/work
-attrs @ file:///work/ci_py311/attrs_1676822758931/work
--e git+ssh://git@github.com/Sean-Leishman/Bespoke-Tart.git@d10b1ba02a81b03f9ff3e7bf72e224c7de95f37f#egg=bespoke_tart
--e git+ssh://git@github.com/Sean-Leishman/Bespoke-Tart.git@d10b1ba02a81b03f9ff3e7bf72e224c7de95f37f#egg=bespoketart
-Bottleneck @ file:///work/ci_py311/bottleneck_1676827011612/work
-brotlipy==0.7.0
+appdirs==1.4.4
+asttokens @ file:///opt/conda/conda-bld/asttokens_1646925590279/work
+async-timeout @ file:///opt/conda/conda-bld/async-timeout_1664876359750/work
+attrs @ file:///croot/attrs_1695717823297/work
+backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
+-e git+ssh://git@github.com/Sean-Leishman/Bespoke-Tart.git@c3263fc4328e6a2aefd5778d423a68a396e957cb#egg=bespoketart
+Bottleneck @ file:///opt/conda/conda-bld/bottleneck_1657175564434/work
+Brotli @ file:///tmp/abs_ecyw11_7ze/croots/recipe/brotli-split_1659616059936/work
 certifi @ file:///croot/certifi_1690232220950/work/certifi
-cffi @ file:///work/ci_py311/cffi_1676822533496/work
+cffi @ file:///croot/cffi_1670423208954/work
 charset-normalizer @ file:///tmp/build/80754af9/charset-normalizer_1630003229654/work
+click==8.1.7
+comm @ file:///croot/comm_1671231121260/work
+contourpy @ file:///opt/conda/conda-bld/contourpy_1663827406301/work
 cryptography @ file:///croot/cryptography_1694444244250/work
+cycler @ file:///tmp/build/80754af9/cycler_1637851556182/work
+-e git+ssh://git@github.com/Sean-Leishman/Bespoke-Tart.git@c3263fc4328e6a2aefd5778d423a68a396e957cb#egg=data&subdirectory=data
 datasets @ file:///croot/datasets_1684482929171/work
-dill @ file:///work/ci_py311/dill_1676827712960/work
-filelock @ file:///home/nshulga/miniconda3/conda-bld/filelock_1675716959985/work
-frozenlist @ file:///work/ci_py311/frozenlist_1676825229010/work
-fsspec @ file:///croot/fsspec_1682525977151/work
-gmpy2 @ file:///work/ci_py311/gmpy2_1676839849213/work
-huggingface-hub @ file:///croot/huggingface_hub_1686693679113/work
-idna @ file:///work/ci_py311/idna_1676822698822/work
+debugpy @ file:///croot/debugpy_1690905042057/work
+decorator @ file:///opt/conda/conda-bld/decorator_1643638310831/work
+dill @ file:///croot/dill_1667919592856/work
+docker-pycreds==0.4.0
+evaluate==0.4.1
+exceptiongroup @ file:///croot/exceptiongroup_1668714342571/work
+executing @ file:///opt/conda/conda-bld/executing_1646925071911/work
+filelock @ file:///croot/filelock_1672387128942/work
+fonttools==4.25.0
+frozenlist @ file:///croot/frozenlist_1670004507010/work
+fsspec @ file:///croot/fsspec_1695734500336/work
+gitdb==4.0.11
+GitPython==3.1.40
+gmpy2 @ file:///tmp/build/80754af9/gmpy2_1645438755360/work
+huggingface-hub @ file:///croot/huggingface_hub_1696885858075/work
+idna @ file:///croot/idna_1666125576474/work
 importlib-metadata @ file:///croot/importlib-metadata_1678997070253/work
-Jinja2 @ file:///work/ci_py311/jinja2_1676823587943/work
+importlib-resources @ file:///croot/importlib_resources_1698254628495/work
+ipykernel @ file:///croot/ipykernel_1691121631942/work
+ipython @ file:///croot/ipython_1694181358621/work
+jedi @ file:///tmp/build/80754af9/jedi_1644297102865/work
+Jinja2 @ file:///croot/jinja2_1666908132255/work
 joblib @ file:///croot/joblib_1685113087166/work
-MarkupSafe @ file:///work/ci_py311/markupsafe_1676823507015/work
+jupyter_client @ file:///croot/jupyter_client_1680171862562/work
+jupyter_core @ file:///croot/jupyter_core_1679906564508/work
+kiwisolver @ file:///croot/kiwisolver_1672387140495/work
+lightning-utilities==0.10.0
+MarkupSafe @ file:///opt/conda/conda-bld/markupsafe_1654597864307/work
+matplotlib @ file:///croot/matplotlib-suite_1693812469450/work
+matplotlib-inline @ file:///opt/conda/conda-bld/matplotlib-inline_1662014470464/work
 mkl-fft @ file:///croot/mkl_fft_1695058164594/work
 mkl-random @ file:///croot/mkl_random_1695059800811/work
 mkl-service==2.4.0
-mpmath==1.2.1
-multidict @ file:///work/ci_py311/multidict_1676825314105/work
-multiprocess @ file:///work/ci_py311/multiprocess_1676841234722/work
+mpmath @ file:///croot/mpmath_1690848262763/work
+multidict @ file:///croot/multidict_1665674239670/work
+multiprocess @ file:///croot/multiprocess_1668006441451/work
+munkres==1.1.4
+nest-asyncio @ file:///croot/nest-asyncio_1672387112409/work
 networkx @ file:///croot/networkx_1690561992265/work
-numexpr @ file:///croot/numexpr_1683221822650/work
-numpy @ file:///croot/numpy_and_numpy_base_1691091611330/work
+nltk==3.8.1
+numexpr @ file:///croot/numexpr_1696515281613/work
+numpy @ file:///croot/numpy_and_numpy_base_1695830428084/work/dist/numpy-1.26.0-cp39-cp39-linux_x86_64.whl#sha256=6c17acd1e1c4a5ebb5d14a2b7abe3d296469c0dd858a8b623abc1f4603184a9d
+opencv-python==4.8.1.78
 packaging @ file:///croot/packaging_1693575174725/work
-pandas @ file:///croot/pandas_1692289311655/work
+pandas @ file:///croot/pandas_1697477158611/work/dist/pandas-2.1.1-cp39-cp39-linux_x86_64.whl#sha256=f91405dd890e1d28b82e65740a6da6c418312fb57d2ade1d6e8853e8e6aaae05
+parso @ file:///opt/conda/conda-bld/parso_1641458642106/work
+pexpect @ file:///tmp/build/80754af9/pexpect_1605563209008/work
+pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
+Pillow @ file:///croot/pillow_1696580024257/work
+platformdirs @ file:///croot/platformdirs_1692205439124/work
+prompt-toolkit @ file:///croot/prompt-toolkit_1672387306916/work
+protobuf==4.25.1
+psutil @ file:///opt/conda/conda-bld/psutil_1656431268089/work
+ptyprocess @ file:///tmp/build/80754af9/ptyprocess_1609355006118/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
+pure-eval @ file:///opt/conda/conda-bld/pure_eval_1646925070566/work
 pyarrow==11.0.0
 pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
+Pygments @ file:///croot/pygments_1684279966437/work
 pyOpenSSL @ file:///croot/pyopenssl_1690223430423/work
-PySocks @ file:///work/ci_py311/pysocks_1676822712504/work
+pyparsing @ file:///opt/conda/conda-bld/pyparsing_1661452539315/work
+PySocks @ file:///tmp/build/80754af9/pysocks_1605305812635/work
 python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
 pytz @ file:///croot/pytz_1695131579487/work
-PyYAML @ file:///work/ci_py311/pyyaml_1676827445582/work
-regex @ file:///work/ci_py311/regex_1677086824242/work
+PyYAML @ file:///croot/pyyaml_1698096049011/work
+pyzmq @ file:///croot/pyzmq_1686601365461/work
+regex @ file:///croot/regex_1696515298636/work
 requests @ file:///croot/requests_1690400202158/work
 responses @ file:///tmp/build/80754af9/responses_1619800270522/work
-safetensors @ file:///croot/safetensors_1692949033383/work
-scikit-learn @ file:///croot/scikit-learn_1684954695550/work
-scipy @ file:///croot/scipy_1691606680890/work/dist/scipy-1.11.1-cp311-cp311-linux_x86_64.whl#sha256=ba491c7d30a02bb93027e90b0aa58c0fe8d1e0fc3ddfe3469178740bd150aa45
+rouge-score==0.1.2
+safetensors @ file:///croot/safetensors_1697478848712/work
+scikit-learn @ file:///croot/scikit-learn_1690978916802/work
+scipy @ file:///croot/scipy_1696543286448/work/dist/scipy-1.11.3-cp39-cp39-linux_x86_64.whl#sha256=dcbb203d235b027eaa2fed4fd131e9dc0e2b3f8eae9458e3f2e848a2718b22f2
+seaborn @ file:///croot/seaborn_1673479180098/work
+sentry-sdk==1.39.1
+seqeval==1.2.2
+setproctitle==1.3.3
 six @ file:///tmp/build/80754af9/six_1644875935023/work
-sympy @ file:///work/ci_py311_2/sympy_1679339311852/work
+smmap==5.0.1
+stack-data @ file:///opt/conda/conda-bld/stack_data_1646927590127/work
+sympy @ file:///croot/sympy_1668202399572/work
 threadpoolctl @ file:///Users/ktietz/demo/mc3/conda-bld/threadpoolctl_1629802263681/work
-tokenizers @ file:///croot/tokenizers_1687191909486/work
-torch~=2.1.0
+tokenizers @ file:///croot/tokenizers_1696539574676/work
+torch==2.1.0
+torchaudio==2.1.0
+torchmetrics==1.2.1
+torchvision @ file:///croot/torchvision_1689078161692/work
+tornado @ file:///croot/tornado_1696936946304/work
 tqdm @ file:///croot/tqdm_1679561862951/work
+traitlets @ file:///croot/traitlets_1671143879854/work
 transformers @ file:///croot/transformers_1693308319445/work
-triton==2.1.0
 typing_extensions @ file:///croot/typing_extensions_1690297465030/work
 tzdata @ file:///croot/python-tzdata_1690578112552/work
-urllib3 @ file:///croot/urllib3_1686163155763/work
-xxhash @ file:///work/ci_py311/python-xxhash_1676842384694/work
-yarl @ file:///work/ci_py311/yarl_1676827604591/work
-zipp @ file:///work/ci_py311/zipp_1676822894295/work
-
-transformers~=4.32.1
-scikit-learn~=1.2.2
-data~=0.0.0
-setuptools~=68.0.0
-tqdm~=4.65.0
-lstm~=0.1
-numpy~=1.25.2
-cbespoketart~=0.1
-seqeval~=1.2.2
-torchmetrics~=1.2.0
-gbespoketart~=0.1
+urllib3 @ file:///croot/urllib3_1698257533958/work
+vastai==0.1.8
+wandb==0.16.1
+wcwidth @ file:///Users/ktietz/demo/mc3/conda-bld/wcwidth_1629357192024/work
+xxhash @ file:///croot/python-xxhash_1667919521615/work
+yarl @ file:///opt/conda/conda-bld/yarl_1661437085904/work
+zipp @ file:///croot/zipp_1672387121353/work
